[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "meshed"
author = "OtoSense"
home-page = "https://github.com/i2mint/meshed"
classifiers = ["License :: OSI Approved :: MIT License"]
description = "Tools for documentation and packaging"


