[metadata]
version = 0.0.9
description = Tools that enable operations on graphs where graphs are represented by an adjacency Mapping.
license = mit
description_file = README.md
long_description = file:README.md
long_description_content_type = text/markdown
keywords =
    dag
    graph
    network
name = meshed
display_name = meshed

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires = 
    lined
    i2


