[metadata]
name = meshed
version = 0.1.53
url = https://github.com/i2mint/meshed
platforms = any
description_file = README.md
description = Link functions up into callable objects
license = mit
long_description = file:README.md
long_description_content_type = text/markdown
keywords = 
		dag
		graph
		network
display_name = meshed

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires = 
	i2


